k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
	app: backend # <-- ต้องตรงกับ labels ของ Pod ใน Deployment
  ports:
	- protocol: TCP
	  port: 80
	  targetPort: 5678 # <-- Port ของ Container ที่จะส่ง traffic ไปให้
